Upgrade Drizzle and Prisma to its latest versions

--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
   "license": "ISC",
   "devDependencies": {
     "@balena/dockerignore": "^1.0.2",
-    "@faker-js/faker": "^8.0.2",
-    "@types/deep-diff": "^1.0.2",
-    "@types/dockerode": "^3.3.19",
-    "@types/k6": "^0.45.2",
-    "@types/pg": "^8.10.2",
-    "@types/pidusage": "^2.0.2",
-    "@types/ramda": "^0.29.3",
+    "@faker-js/faker": "^8.3.1",
+    "@types/deep-diff": "^1.0.5",
+    "@types/dockerode": "^3.3.23",
+    "@types/k6": "^0.45.3",
+    "@types/pg": "^8.10.9",
+    "@types/pidusage": "^2.0.5",
+    "@types/ramda": "^0.29.9",
     "deep-diff": "^1.0.2",
     "dockerode": "^3.3.5",
-    "drizzle-kit": "^0.19.12",
-    "esbuild": "^0.19.2",
+    "drizzle-kit": "^0.20.10",
+    "esbuild": "^0.19.11",
     "get-port": "^7.0.0",
     "k6": "^0.0.0",
-    "postgres": "^3.3.5",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "postgres": "^3.4.3",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@hono/node-server": "^1.1.1",
-    "@prisma/client": "5.1.1",
-    "axios": "^1.4.0",
+    "@hono/node-server": "^1.4.0",
+    "@prisma/client": "^5.8.0",
+    "axios": "^1.6.5",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.28.1",
-    "hono": "^3.4.1",
-    "pg": "^8.11.2",
+    "drizzle-orm": "^0.29.3",
+    "hono": "^3.12.1",
+    "pg": "^8.11.3",
     "pidusage": "^3.0.2",
-    "prisma": "^5.1.1",
-    "ramda": "^0.29.0"
+    "prisma": "^5.8.0",
+    "ramda": "^0.29.1"
   }
 }
