--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@balena/dockerignore": "^1.0.2",
     "@faker-js/faker": "^8.0.2",
+    "@types/bun": "^1.1.6",
     "@types/deep-diff": "^1.0.2",
     "@types/dockerode": "^3.3.19",
     "@types/k6": "^0.45.2",
@@ -25,7 +26,7 @@
     "@types/ramda": "^0.29.3",
     "deep-diff": "^1.0.2",
     "dockerode": "^3.3.5",
-    "drizzle-kit": "^0.19.12",
+    "drizzle-kit": "^0.24.0",
     "esbuild": "^0.19.2",
     "get-port": "^7.0.0",
     "k6": "^0.0.0",
@@ -35,14 +36,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.1.1",
-    "@prisma/client": "5.1.1",
+    "@prisma/client": "5.18.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.28.1",
+    "drizzle-orm": "^0.33.0",
     "hono": "^3.4.1",
     "pg": "^8.11.2",
     "pidusage": "^3.0.2",
-    "prisma": "^5.1.1",
+    "prisma": "^5.18.0",
     "ramda": "^0.29.0"
   }
 }
