--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@hono/node-server": "^1.1.1",
     "@prisma/client": "5.18.0",
     "axios": "^1.4.0",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.33.0",
+    "duckdb": "^1.0.0",
     "hono": "^3.4.1",
     "pg": "^8.11.2",
     "pidusage": "^3.0.2",
