--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "duckdb": "^1.0.0",
     "hono": "^3.4.1",
     "pg": "^8.11.2",
+    "pg-native": "^3.1.0",
     "pidusage": "^3.0.2",
     "prisma": "^5.18.0",
     "ramda": "^0.29.0"
