--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bench": "tsx bench/index.ts --host http://localhost:3000 --name my-bench --folder results",
     "start:docker": "tsx ./src/docker.ts",
     "start:seed": "tsx ./src/seed.ts",
+    "start:sqlite:seed": "tsx ./src/sqlite/seed.ts",
     "start:generate": "tsx ./src/generate.ts",
     "prepare:prisma": "prisma generate --schema src/schema.prisma",
     "start:prisma": "tsx ./src/prisma-server.ts",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@balena/dockerignore": "^1.0.2",
     "@faker-js/faker": "^8.0.2",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/bun": "^1.1.6",
     "@types/deep-diff": "^1.0.2",
     "@types/dockerode": "^3.3.19",
@@ -39,6 +41,7 @@
     "@hono/node-server": "^1.1.1",
     "@prisma/client": "5.18.0",
     "axios": "^1.4.0",
+    "better-sqlite3": "^11.2.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.33.0",
