--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bench": "tsx bench/index.ts --host http://localhost:3000 --name my-bench --folder results",
     "start:docker": "tsx ./src/docker.ts",
     "start:seed": "tsx ./src/seed.ts",
-    "start:sqlite:seed": "tsx ./src/sqlite/seed.ts",
+    "start:seed:sqlite": "tsx ./src/sqlite/seed.ts",
     "start:generate": "tsx ./src/generate.ts",
     "prepare:prisma": "prisma generate --schema src/schema.prisma",
+    "prepare:prisma:sqlite": "prisma generate --schema src/sqlite/schema.prisma",
     "start:prisma": "tsx ./src/prisma-server.ts",
     "start:drizzle": "tsx ./src/drizzle-server.ts"
   },
