--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start:generate": "tsx ./src/generate.ts",
     "prepare:prisma": "prisma generate --schema src/schema.prisma",
     "prepare:prisma:sqlite": "prisma generate --schema src/sqlite/schema.prisma",
-    "start:prisma": "tsx ./src/prisma-server.ts",
-    "start:drizzle": "tsx ./src/drizzle-server.ts"
+    "start:prisma": "tsx ./src/prisma-server-node.ts",
+    "start:drizzle": "tsx ./src/drizzle-server-node.ts"
   },
   "keywords": [],
   "author": "",
